--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,9 +65,9 @@ dependencies {
 
     // testing
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    def fragment_version = "1.3.2"
-    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+    debugImplementation 'androidx.fragment:fragment-testing:1.3.2'
+    androidTestImplementation 'androidx.navigation:navigation-testing:2.3.5'
 }
